--- a/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
+++ b/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
@@ -180,7 +180,7 @@
         
         <ProgressBar Grid.Row="1" Height="25" Value="{Binding TotalProgress}" Visibility="{Binding ShouldShowProgress, Converter={StaticResource BoolToVis}}" />
 
-        <Button Grid.Row="2" HorizontalAlignment="Left" Command="{Binding FindMSFeaturesCommand}" Height="25" Width="125">Find Features</Button>
-        <Button Grid.Row="2" HorizontalAlignment="Right" Command="{Binding PlotMSFeaturesCommand}" Height="25" Width="140">Plot Unaligned Features</Button>
+        <Button Grid.Row="2" HorizontalAlignment="Left" Command="{Binding FindMSFeaturesCommand}" Height="25" Width="125">Load LCMS Features</Button>
+        <Button Grid.Row="2" HorizontalAlignment="Right" Command="{Binding PlotMSFeaturesCommand}" Height="25" Width="140">Plot Features</Button>
     </Grid>
 </UserControl>
