Disable "Create XICs" in the Feature Finding settings if no datasets have "RawData" that can be read using an ISpectraProvider

--- a/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
+++ b/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
@@ -130,7 +130,7 @@
                     <GroupBox Grid.Row="1">
                         <GroupBox.Header>
                             <StackPanel Orientation="Horizontal">
-                                <CheckBox VerticalAlignment="Center" IsChecked="{Binding ShouldCreateXics, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                <CheckBox VerticalAlignment="Center" IsChecked="{Binding ShouldCreateXics, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding CanCreateXics, UpdateSourceTrigger=PropertyChanged}">
                                     Extracted Ion Chromatograms
                                 </CheckBox>
                             </StackPanel>
