Moving a lot of the static dataset loading functions from DatasetInformation to DatasetLoader. Making everything use the new DatasetLoader.

--- a/src/MultiAlignRogue/NewProjectWindow.xaml
+++ b/src/MultiAlignRogue/NewProjectWindow.xaml
@@ -67,7 +67,7 @@
                         </DataGridTemplateColumn>
 
                         <DataGridTextColumn Header="Dataset Name" Width="25*" Binding="{Binding Dataset.Alias}" />
-                        <DataGridTextColumn Header="Dataset Path" Width="75*" Binding="{Binding Dataset.RawPath}" />
+                        <DataGridTextColumn Header="Dataset Path" Width="75*" Binding="{Binding Dataset.FeaturePath}" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
