--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -132,9 +132,16 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="20" />
                             <RowDefinition Height="25" />
+                            
                             <RowDefinition Height="20" />
+                            
                             <RowDefinition Height="20" />
                             <RowDefinition Height="25" />
+
+                            <RowDefinition Height="20" />
+
+                            <RowDefinition Height="25" />
+                            
                             <RowDefinition Height="*" />
                             <RowDefinition Height="25" />
                             <RowDefinition Height="5" />
@@ -164,12 +171,16 @@
                         <CheckBox Grid.Row="4" Grid.Column="2" Content="Separate by Charge" FontWeight="Bold" HorizontalAlignment="Center"
                                   VerticalAlignment="Center" IsChecked="{Binding ShouldSeparateByCharge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                   IsEnabled="{Binding ShouldEnableClustererSettings}" />
-
-                        <ProgressBar Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" Value="{Binding ProgressPercent}"
+                        
+                        <CheckBox Grid.Row="6" Grid.Column="0"
+                                  VerticalAlignment="Center"
+                                  IsChecked="{Binding ShouldRefineWithMsMs, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">Refine clusters using MS/MS</CheckBox>
+                        
+                        <ProgressBar Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="3" Value="{Binding ProgressPercent}"
                                      Visibility="{Binding ShouldShowProgress, Converter={StaticResource BoolToVis}}" />
 
-                        <Button Grid.Row="8" Grid.Column="0" Content="Cluster Features" Command="{Binding ClusterFeaturesCommand}" Width="125" HorizontalAlignment="Left" />
-                        <Button Grid.Row="8" Grid.Column="2" Content="View Clusters" Command="{Binding DisplayClustersCommand}" Width="125" HorizontalAlignment="Right" />
+                        <Button Grid.Row="10" Grid.Column="0" Content="Cluster Features" Command="{Binding ClusterFeaturesCommand}" Width="125" HorizontalAlignment="Left" />
+                        <Button Grid.Row="10" Grid.Column="2" Content="View Clusters" Command="{Binding DisplayClustersCommand}" Width="125" HorizontalAlignment="Right" />
                     </Grid>
                 </TabItem>
                 <TabItem Header="4. AMT Tag Matching" DataContext="{Binding StacSettingsViewModel}">
